syntax = "proto3";

package model;

message Client {
    bytes CUID = 1;
    string alias = 2;
    string collection = 3;
    SyncType syncType = 4;
}

enum SyncType {
    LOCAL_ONLY = 0;
    MANUALLY = 1;
    NOTIFIABLE = 2;
}

message Timestamp {
    uint32 era = 1;
    uint64 lamport = 2;
    bytes CUID = 3;
    uint32 delimiter = 4;
}

message OperationID {
    uint32 era = 1;
    uint64 lamport = 2;
    bytes CUID = 3;
    uint64 seq = 4;
}

message Operation {
    OperationID ID = 1;
    TypeOfOperation opType = 2;
    bytes json = 3;
}

enum TypeOfOperation {
    SNAPSHOT = 0;
    DELETE = 2;
    ERROR = 3;
    TRANSACTION = 5;
    INT_COUNTER_INCREASE = 11;
    HASH_MAP_PUT = 21;
    HASH_MAP_REMOVE = 22;
    LIST_INSERT = 31;
    LIST_DELETE = 32;
    LIST_UPDATE = 33;
    DOCUMENT_PUT_OBJ = 41;
    DOCUMENT_DEL_OBJ = 42;
    DOCUMENT_INS_ARR = 43;
    DOCUMENT_DEL_ARR = 44;
}

enum TypeOfDatatype {
    INT_COUNTER = 0;
    HASH_MAP = 1;
    LIST = 2;
    DOCUMENT = 3;
}

enum StateOfDatatype {
    DUE_TO_CREATE = 0;
    DUE_TO_SUBSCRIBE = 1;
    DUE_TO_SUBSCRIBE_CREATE = 2;
    SUBSCRIBED = 4;
    DUE_TO_UNSUBSCRIBE = 5;
    UNSUBSCRIBED = 6;
    DELETED = 7;
}

message PushPullPack {
    bytes DUID = 1;
    string key = 2;
    fixed32 option = 3;
    CheckPoint checkPoint = 4;
    uint32 era = 5;
    int32 type = 6;
    repeated Operation operations = 7;
}

message CheckPoint {
    // @inject_tag: bson:"s"
    uint64 sseq = 1 [json_name = "s"];
    // @inject_tag: bson:"c"
    uint64 cseq = 2 [json_name = "c"];
}

message NotificationPushPull {
    string CUID = 1;
    string DUID = 2;
    uint64 sseq = 3;
}

message DatatypeMeta {
    string key = 1;
    bytes DUID = 2;
    OperationID opID = 3;
    TypeOfDatatype typeOf = 4;
    StateOfDatatype state = 5;
}